# ai-invoice-auditor

./: .coverage  .env.example  .gitignore  3DAY_SPRINT_PLAN.md  AGILE_PLAN.md  AI Invoice Auditor Agentic AI Capstone Project.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: business_validation_agent.py  data_validation_agent.py  extractor_agent.py  invoice_monitor_agent.py  reporting_agent.py  translation_agent.py
agents/rag/: augmentation_agent.py  generation_agent.py  indexing_agent.py  reflection_agent.py  retrieval_agent.py
core/: config.py  logger.py  observability.py  rai_guardrails.py  state.py
data/: README.md  translation_cache.json
data/incoming/: INV_EN_001.meta.json
erp_mock/: main.py
mcp_tools/: server.py
tests/: test_business_validation.py  test_core_config.py  test_core_logger.py  test_core_state.py  test_data_harvester_tool.py  test_data_validation_agent.py  test_e2e.py  test_erp_mock.py  test_invoice_pipeline.py  test_invoice_watcher_tool.py  test_lang_bridge_tool.py  test_rag_system.py
tools/: business_validation_tool.py  chunk_ranker_tool.py  data_completeness_checker.py  data_harvester_tool.py  field_extractor_tool.py  insight_reporter_tool.py  invoice_watcher_tool.py  lang_bridge_tool.py  response_synthesizer_tool.py  semantic_retriever_tool.py  vector_indexer_tool.py
ui/: app.py
workflows/: invoice_pipeline.py  rag_pipeline.py
