[project]
name = "ai-invoice-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "deep-translator>=1.11.4",
    "fastapi>=0.135.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "langchain>=0.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=0.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pydantic>=2.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
